nicap_extend/software/.metadata/.plugins/org.eclipse.cdt.ui/zyn_bypass.build.log
16:35:33 **** Build of configuration Debug for project zyn_bypass ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/ZyNCAP_pr.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/ZyNCAP_pr.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/ZyNCAP_pr.d" -MT"src/ZyNCAP_pr.o" -o "src/ZyNCAP_pr.o" "../src/ZyNCAP_pr.c"
../src/ZyNCAP_pr.c:20:0: warning: "XPAR_PARTIAL_LED_TEST_0_S00_AXI_BASEADDR" redefined
 #define XPAR_PARTIAL_LED_TEST_0_S00_AXI_BASEADDR XPAR_PARTIAL_LED_0_S00_AXI_BASEADDR
 
In file included from ../src/ZyNCAP_pr.c:9:0:
../../standalone_bsp_0/ps7_cortexa9_0/include/xparameters.h:381:0: note: this is the location of the previous definition
 #define XPAR_PARTIAL_LED_TEST_0_S00_AXI_BASEADDR 0xFFFFFFFF
 
../src/ZyNCAP_pr.c: In function 'main':
../src/ZyNCAP_pr.c:20:50: error: 'XPAR_PARTIAL_LED_0_S00_AXI_BASEADDR' undeclared (first use in this function)
 #define XPAR_PARTIAL_LED_TEST_0_S00_AXI_BASEADDR XPAR_PARTIAL_LED_0_S00_AXI_BASEADDR
                                                  ^
../src/ZyNCAP_pr.c:20:50: note: in definition of macro 'XPAR_PARTIAL_LED_TEST_0_S00_AXI_BASEADDR'
 #define XPAR_PARTIAL_LED_TEST_0_S00_AXI_BASEADDR XPAR_PARTIAL_LED_0_S00_AXI_BASEADDR
                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/ZyNCAP_pr.c:20:50: note: each undeclared identifier is reported only once for each function it appears in
 #define XPAR_PARTIAL_LED_TEST_0_S00_AXI_BASEADDR XPAR_PARTIAL_LED_0_S00_AXI_BASEADDR
                                                  ^
../src/ZyNCAP_pr.c:20:50: note: in definition of macro 'XPAR_PARTIAL_LED_TEST_0_S00_AXI_BASEADDR'
 #define XPAR_PARTIAL_LED_TEST_0_S00_AXI_BASEADDR XPAR_PARTIAL_LED_0_S00_AXI_BASEADDR
                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [src/subdir.mk:56: src/ZyNCAP_pr.o] Error 1

16:35:33 Build Finished (took 187ms)

